--- a/index.html
+++ b/index.html
@@ -105,12 +105,21 @@
 
 <h2>Frequently Asked Questions</h2>
 
+<h4>Frequently Asked Questions</h4>
 
+<ul>
+<li>None</li>
+</ul>
 
 
 <h2>Other Notes</h2>
 
+<h3>Other Notes</h3>
+<h4>Additional Documentation</h4>
 
+<ul>
+<li>None</li>
+</ul>
 
       </section>
       <footer>
