--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
 
 <p>Examples:</p>
 
-<pre><code>[wp-file-get-contents url="http://example.com/dir/file.html"]
+<pre>
+[wp-file-get-contents url="http://example.com/dir/file.html"]
 
 [wp-file-get-contents url="http://example.com/counter/" cache="0"]
 
 [wp-file-get-contents url="file://dir/file.html"]
 
 [wp-file-get-contents file="/dir/file.txt" pre="true" filter="my_custom_filters" cache="3600"]
-</code></pre>
+</pre>
 
 <p><strong>Note that all local file paths are relative to the <code>wp-contents/</code> folder</strong>.</p>
 
