update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>wp-file-get-contents</h1>
-        <p>WP file_get_contents()</p>
+        <p>JSM&#039;s file_get_contents() Shortcode</p>
 
         <p class="view"><a href="https://github.com/jsmoriss/wp-file-get-contents">View the Project on GitHub <small>jsmoriss/wp-file-get-contents</small></a></p>
 
