--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ define( 'WPFGC_SHORTCODE_NAME', 'wpfgc' );
 
 <h2>Frequently Asked Questions</h2>
 
-<h3>Frequently Asked Questions</h3>
+<h3 class="top">Frequently Asked Questions</h3>
 
 <ul>
 <li>None</li>
@@ -119,7 +119,7 @@ define( 'WPFGC_SHORTCODE_NAME', 'wpfgc' );
 <h2>Other Notes</h2>
 
 <h3>Other Notes</h3>
-<h3>Additional Documentation</h3>
+<h3 class="top">Additional Documentation</h3>
 
 <ul>
 <li>None</li>
