non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>JSM&#039;s file_get_contents() Shortcode</td></tr>
 <tr><th align="right" valign="top" nowrap>Summary</th><td>A safe and reliable WordPress shortcode for PHP&#039;s file_get_contents() function.</td></tr>
-<tr><th align="right" valign="top" nowrap>Stable Version</th><td>2.2.0</td></tr>
+<tr><th align="right" valign="top" nowrap>Stable Version</th><td>2.3.0</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires PHP</th><td>7.0 or newer</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires WordPress</th><td>4.5 or newer</td></tr>
 <tr><th align="right" valign="top" nowrap>Tested Up To WordPress</th><td>5.6</td></tr>
@@ -76,7 +76,7 @@ define( 'WPFGC_SHORTCODE_NAME', 'include' );
 &#91;wpfgc url="http://example.com/dir/file.html"&#93;
 &#91;wpfgc url="http://example.com/counter/" cache="7200"&#93;
 &#91;wpfgc url="file://dir/file.html"&#93;
-&#91;wpfgc file="/dir/file.txt" pre="true" filter="my_custom_filters" cache="600"&#93;
+&#91;wpfgc file="/dir/file.txt" pre="true" filter="my_custom_filter_name" cache="600"&#93;
 </pre>
 
 
