non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
 
 <p>The WPFGC_SHORTCODE_NAME constant can be defined in your wp-config.php file to add an additional custom shortcode name (the default shortcode names are 'wp-file-get-contents' and 'wpfgc').</p>
 
-<pre>
-define( 'WPFGC_SHORTCODE_NAME', 'include' );
-</pre>
+<pre>define( 'WPFGC_SHORTCODE_NAME', 'include' );</pre>
 
 <h4>Shortcode Examples</h4>
 
-<pre>
-&#91;wpfgc url="http://example.com/dir/file.html"&#93;
+<pre>&#91;wpfgc url="http://example.com/dir/file.html"&#93;
 &#91;wpfgc url="http://example.com/counter/" cache="7200"&#93;
 &#91;wpfgc url="file://dir/file.html"&#93;
-&#91;wpfgc file="/dir/file.txt" pre="true" filter="my_custom_filter_name" cache="600"&#93;
-</pre>
+&#91;wpfgc file="/dir/file.txt" pre="true" filter="my_custom_filter_name" cache="600"&#93;</pre>
+
+<h4>Need a Boost to your Social and Search Ranking?</h4>
+
+<p>Check out <a href="https://wordpress.org/plugins/wpsso/">the WPSSO Core plugin</a> to present your content at its best on social sites and in search results, no matter how webpages are shared, re-shared, messaged, posted, embedded, or crawled.</p>
 
 
 <h2>Installation</h2>
